--- a/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
@@ -180,15 +180,15 @@
  concept_toxic_features_desc: "$NEW_LINE$- ['concept_pools_most_venemous'] $NEW_LINE$- ['concept_pestilential_wasteland'] $NEW_LINE$- ['concept_deitys_swarms'] $NEW_LINE$- ['concept_blight_upon_the_land'] $NEW_LINE$- ['concept_envenomed_seas']"
  toxic_feature_improvement: "$NEW_LINE$- On completing §YKnightly Quests§!: Bonuses on this Planetary Feature"
  concept_pools_most_venemous: "£blocker£ $d_toxic_god_pools_most_venemous$"
- concept_pools_most_venemous_desc: "- Max Districts: §R-1§!\n\n§L$d_toxic_god_pools_most_venemous_desc$§!"
+ concept_pools_most_venemous_desc: "- จำนวนเขตสูงสุด: §R-1§!\n\n§L$d_toxic_god_pools_most_venemous_desc$§!"
  concept_pestilential_wasteland: "£blocker£ $d_toxic_god_pestilential_wasteland$"
- concept_pestilential_wasteland_desc: "- Max Districts: §R-1§!$toxic_feature_improvement$\n\n§L$d_toxic_god_pestilential_wasteland_desc$§!"
+ concept_pestilential_wasteland_desc: "- จำนวนเขตสูงสุด: §R-1§!$toxic_feature_improvement$\n\n§L$d_toxic_god_pestilential_wasteland_desc$§!"
  concept_deitys_swarms: "£blocker£ $d_toxic_god_deitys_swarms$"
- concept_deitys_swarms_desc: "- Max Districts: §R-1§!$toxic_feature_improvement$\n\n§L$d_toxic_god_deitys_swarms_desc$§!"
+ concept_deitys_swarms_desc: "- จำนวนเขตสูงสุด: §R-1§!$toxic_feature_improvement$\n\n§L$d_toxic_god_deitys_swarms_desc$§!"
  concept_blight_upon_the_land: "£blocker£ $d_toxic_god_blight_upon_the_land$"
- concept_blight_upon_the_land_desc: "- Max Districts: §R-1§!$toxic_feature_improvement$\n\n§L$d_toxic_god_blight_upon_the_land_desc$§!"
+ concept_blight_upon_the_land_desc: "- จำนวนเขตสูงสุด: §R-1§!$toxic_feature_improvement$\n\n§L$d_toxic_god_blight_upon_the_land_desc$§!"
  concept_envenomed_seas: "£blocker£ $d_toxic_god_envenomed_seas$"
- concept_envenomed_seas_desc: "- Max Districts: §R-1§!$toxic_feature_improvement$\n\n§L$d_toxic_god_envenomed_seas_desc$§!"
+ concept_envenomed_seas_desc: "- จำนวนเขตสูงสุด: §R-1§!$toxic_feature_improvement$\n\n§L$d_toxic_god_envenomed_seas_desc$§!"
  concept_pc_ocean: "$pc_ocean$"
  concept_pc_ocean_desc: "- การอยู่อาศัยได้ (พื้นฐาน): §Y0%§!\n\n§L$pc_ocean_desc$§!"
  concept_ocean_paradise_mod: "$ocean_paradise$"
@@ -222,7 +222,7 @@
  concept_payback_debris_field: "$payback_debris_field$"
  concept_payback_debris_field_desc: "- $MOD_POP_ENVIRONMENT_TOLERANCE$: §R-30%§!\n- $mod_planet_structures_cost_mult$: §R+15%§!\n- $mod_planet_structures_upkeep_mult$: §R+50%§!\n- การทำลายล้างเริ่มต้น: §R33%§!\n\n§L$payback_debris_field_desc$§!"
  concept_payback_ship_debris: "£blocker£ $d_ship_debris_payback_blocker$"
- concept_payback_ship_debris_desc: "- เวลาในการเคลียร์: £time£ 360 §Iวัน§!\n- ค่าใช้จ่ายในการเคลียร์: $i_energy$ 300\n- เขตสูงสุด: §R-1§!\n- ในระหว่างทำการเคลียร์: $ship_debris_payback_blocker_tt$\n\n§L$d_ship_debris_payback_blocker_desc$§!"
+ concept_payback_ship_debris_desc: "- เวลาในการเคลียร์: £time£ 360 §Iวัน§!\n- ค่าใช้จ่ายในการเคลียร์: $i_energy$ 300\n- จำนวนเขตสูงสุด: §R-1§!\n- ในระหว่างทำการเคลียร์: $ship_debris_payback_blocker_tt$\n\n§L$d_ship_debris_payback_blocker_desc$§!"
  concept_leader_trait_legendary_leader: "$leader_trait_legendary_leader$"
  concept_leader_trait_legendary_leader_desc: "$THIS_LEADER_TXT$:$TABBED_NEW_LINE$- $MOD_LEADER_AGE$: §G+40§!$TABBED_NEW_LINE$- เลเวลเริ่มต้นของผู้นำ: §G+4§!$TABBED_NEW_LINE$- สามารถเลือก §Iคุณลักษณะผู้นำในตำนาน(เริ่มต้น)§! ได้\n\n$EMPIRE_EFFECTS_TXT$$TABBED_NEW_LINE$- $MOD_PLANET_STABILITY_ADD$: §G+1.5§!$TABBED_NEW_LINE$- $mod_planet_jobs_unity_produces_mult$: §G+3%§!\n\n§GThe Luminary grows in power over time.§!\n\n§LThe Unification Wars were a brutal affair. In the end, the Luminary brought peace and purpose to us all. The Luminary is the living symbol of what our species can achieve, and an inspiration to all.§!"
  concept_perfected_genes: "$trait_perfected_genes$"
