--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -945,12 +945,12 @@
  spifed_jointop_mixed_desc:0 "The Ecumenical Council held by our federation was a partial success."
  spifed_jointop_xpboost:0 "Experience from Joint Operation"
  NAMEPLATE_EMPTY_STRING: "$ttt$"
- REQUIREMENTS_HEADER: "§ERequirements:§!"
- EFFECTS_HEADER: "§EEffects:§!"
- TOAST_HABITAT_BUILT_TITLE: "Habitat Complex Built"
- TOAST_HABITAT_BUILT_DESC: "The [target_habitat.GetName] is now complete."
- TOAST_ORBITAL_BUILT_TITLE: "Orbital Built"
- TOAST_ORBITAL_BUILT_DESC: "An Orbital has been constructed in orbit of [target_planet.GetName]"
+ REQUIREMENTS_HEADER: "§Eความต้องการ:§!"
+ EFFECTS_HEADER: "§Eผล:§!"
+ TOAST_HABITAT_BUILT_TITLE: "ที่อยู่อาศัยวงโคจรดาว (ซับซ้อน)"
+ TOAST_HABITAT_BUILT_DESC: "[target_habitat.GetName] เสร็จสมบูรณ์แล้ว"
+ TOAST_ORBITAL_BUILT_TITLE: "สิ่งปลูกสร้างในวงโคจร"
+ TOAST_ORBITAL_BUILT_DESC: "สิ่งปลูกสร้างถูกสร้างขึ้นในวงโคจร [target_planet.GetName]"
  d_hab_nanites_1:0 "Nanite Deposit"
  d_hab_nanites_1_desc:1 "This $habitat_complex$ is built near an exploitable source of nanites."
  UNLOCKS_ORBITAL: "§Hปลดล็อกที่อยู่อาศัยโคจรดาว:§!"
@@ -971,22 +971,22 @@
  allow_habitat_2_upgrade:1 "§Hปลดล็อกการตัดสินใจของดาวเคราะห์:§! $decision_upgrade_habitat_2$"
  decision_upgrade_habitat:1 "อัปเกรดเป็น $habitat_1$"
  decision_upgrade_habitat_effects_short:1 "$decision_upgrade_habitat_effects$"
- decision_upgrade_habitat_effects:1 "£mod_pop_environment_tolerance£ $MOD_POP_ENVIRONMENT_TOLERANCE$: §G+10%§!\n£mod_planet_max_districts_add£ Max District Slots from $major_orbital_plural$: §G+0.25§!\n£mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$ from $major_orbital_generic_plural$: §G+0.25§!\n£mod_planet_max_branch_office_buildings_add£ $MOD_PLANET_MAX_BRANCH_OFFICE_BUILDINGS_ADD$: §G+1§!"
+ decision_upgrade_habitat_effects:1 "£mod_pop_environment_tolerance£ $MOD_POP_ENVIRONMENT_TOLERANCE$: §G+10%§!\n£mod_planet_max_districts_add£ สล็อตช่องเขตสูงสุด จาก $major_orbital_plural$: §G+0.25§!\n£mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$ จาก $major_orbital_generic_plural$: §G+0.25§!\n£mod_planet_max_branch_office_buildings_add£ $MOD_PLANET_MAX_BRANCH_OFFICE_BUILDINGS_ADD$: §G+1§!"
  decision_upgrade_habitat_desc:0 "$tech_habitat_2_desc$"
  requires_orbital: "$TRIGGER_FAIL$§RRequires an Orbital present§!"
  decision_upgrade_habitat_2:0 "อัปเกรดเป็น $habitat_2$"
  decision_upgrade_habitat_2_effects_short:1 "$decision_upgrade_habitat_effects$"
  decision_upgrade_habitat_2_desc:0 "$tech_habitat_3_desc$"
  max_one_orbital_per_system: "$TRIGGER_FAIL$§RWe can only build one Orbital of this type per system§!"
- d_system_resources: "Orbital Resources"
+ d_system_resources: "ทรัพยากรในวงโคจรดาว"
  d_system_resources_desc: "Construction of Orbitals around major and minor celestial bodies throughout the system feeds the resource requirements of this growing Orbital Complex."
- system_resources_tooltip: "The §Y[solar_system.GetName]§! System can support: $TABBED_NEW_LINE$ Major Orbitals: §Y[solar_system.GetNumMajorOrbitals]/[solar_system.GetMaxMajorOrbitals]§! $TABBED_NEW_LINE$ Minor Orbitals: §Y[solar_system.GetNumMinorOrbitals]/[solar_system.GetMaxMinorOrbitals]§!\n\nOrbitals currently provide:"
+ system_resources_tooltip: "ระบบดาว §Y[solar_system.GetName]§! สามารถรองรับ: $TABBED_NEW_LINE$ สถานีที่อยู่อาศัยโคจรดาว(หลัก): §Y[solar_system.GetNumMajorOrbitals]/[solar_system.GetMaxMajorOrbitals]§! $TABBED_NEW_LINE$ สถานีที่อยู่อาศัยโคจรดาว(รอง): §Y[solar_system.GetNumMinorOrbitals]/[solar_system.GetMaxMinorOrbitals]§!\n\nสถานีวงโคจรในปัจจุบันให้:"
  d_ruined_major_orbital: "Ruined Major Orbital"
  d_ruined_major_orbital_desc: "This orbital has experienced a catastrophic hull failure. Repairs must be done before habitation functions can be resumed."
  d_ruined_minor_orbital: "Ruined Minor Orbital"
  d_ruined_minor_orbital_desc: "$d_ruined_major_orbital_desc$"
- habitat_0_MEGASTRUCTURE_DETAILS:2 "§HHabitat§!\nAn §Y$pc_habitat$§! is a self-sustaining space station designed for permanent habitation."
- habitat_0_CONSTRUCTION_INFO_DELAYED:5 "A §Y$major_orbital$§! will also be constructed, granting:\n$t$- $major_orbital_effect$"
+ habitat_0_MEGASTRUCTURE_DETAILS:2 "§Hที่อยู่อาศัยในอวกาศ§!\n§Y$pc_habitat$§! เป็นสถานีอวกาศที่สามารถพึ่งพาตนเองได้ซึ่งออกแบบมาเพื่อการอยู่อาศัยถาวร"
+ habitat_0_CONSTRUCTION_INFO_DELAYED:5 "§Y$major_orbital$§! ก็จะก่อสร้างให้ด้วย, ที่จะให้ผลดังนี้:\n$t$- $major_orbital_effect$"
  habitat_0:0 "ที่อยู่อาศัยในอวกาศ"
  habitat_0_DESC:0 "A habitation station that orbits an uninhabitable planet, capable of housing several §HPops§! and §HBuildings§! away from the surface."
  habitat_central_complex_ruined: "Ruined $habitat_central_complex$"
@@ -1001,66 +1001,66 @@
  habitat_central_complex: "ศูนย์กลางที่อยู่อาศัยวงโคจรดาว(ซับซ้อน)"
  habitat_central_complex_plural: "ศูนย์กลางที่อยู่อาศัยวงโคจรดาว(ซับซ้อน)"
  habitat_central_complex_DESC: "The central orbital of a §Y$habitat_complex$§!, capable of housing several £pop£ §YPops§! and providing space for £building£ §YBuildings§! and £district£ §YDistricts§! in orbit of uninhabitable planets."
- habitat_central_complex_MEGASTRUCTURE_DETAILS: "A §Y$habitat_complex$§! is a collection of self-sustaining orbitals designed for permanent habitation."
- habitat_central_complex_CONSTRUCTION_INFO_DELAYED: "$REQUIREMENTS_HEADER$ $major_orbital_requirements$ \n\n$EFFECTS_HEADER$ $NEW_LINE$- A Colonisable (Size: £planetsize£ 6) §YHabitat§! will be created. $NEW_LINE$- $habitat_0_CONSTRUCTION_INFO_DELAYED$"
+ habitat_central_complex_MEGASTRUCTURE_DETAILS: "§Y$habitat_complex$§! คือกลุ่มของสิ่งปลูกสร้างวงโคจรที่พึ่งพาตนเองได้ ออกแบบมาเพื่อการอยู่อาศัยถาวร"
+ habitat_central_complex_CONSTRUCTION_INFO_DELAYED: "$REQUIREMENTS_HEADER$ $major_orbital_requirements$ \n\n$EFFECTS_HEADER$ $NEW_LINE$- อาณานิคม (ขนาด: £planetsize£ 6) §Yที่อยู่อาศัยในอวกาศ§! จะถูกสร้างขึ้น $NEW_LINE$- $habitat_0_CONSTRUCTION_INFO_DELAYED$"
  requires_habitat_central_complex: "$TRIGGER_FAIL$§RRequires a $habitat_central_complex$ present in the system§!"
  requires_not_habitat_central_complex: "$TRIGGER_FAIL$§RCannot build due to existing $habitat_central_complex$ in the system§!"
  add_research_options_voidborn:0 "ตัวเลือกการวิจัยที่ได้รับหลังจากอัปเกรดที่อยู่อาศัยในอวกาศ:\n£engineering_research£§Y$tech_habitat_3$§!"
- HABITAT_PLANET_NAME:1 "[FROM.from.solar_system.GetName] Habitat Complex"
- TARGET_ORBITAL_NAME: "[FROM.from.planet.GetName] Orbital"
+ HABITAT_PLANET_NAME:1 "สถานีที่อยู่อาศัยวงโคจร [FROM.from.solar_system.GetName] (ซับซ้อน)"
+ TARGET_ORBITAL_NAME: "สถานีวงโคจร [FROM.from.planet.GetName]"
  orbital_DESC_GENERIC: "A basic orbital designed to provide additional living and working quarters for the population of the local §Y$habitat_central_complex$§!."
- orbital_MEGASTRUCTURE_DETAILS_ENDING: "is a basic orbital designed to provide additional living and working quarters for the population of the local §Y$habitat_central_complex$§!."
+ orbital_MEGASTRUCTURE_DETAILS_ENDING: "เป็นที่อยู่อาศัยในอวกาศพื้นฐานที่ออกแบบมาเพื่อเป็นที่อยู่อาศัยและที่ทำงานเพิ่มเติมสำหรับประชากรในท้องถิ่นของ §Y$habitat_central_complex$§!"
  orbital_DELAYED_START: "- §Y$habitat_central_complex$§!:\n$t$- "
- major_orbital: "Major Orbital"
- major_orbital_plural: "ที่อยู่อาศัยโคจรดาว (หลัก)"
- major_orbital_effect: "£mod_planet_max_districts_add£ Max District Slots: §G+0.50§!\n$t$- $orbital_effect$"
+ major_orbital: "ที่อยู่อาศัยโคจรดาว (หลัก)"
+ major_orbital_plural: "ที่อยู่อาศัยโคจร (หลัก)"
+ major_orbital_effect: "£mod_planet_max_districts_add£ สล็อตช่องเขตสูงสุด: §G+0.50§!\n$t$- $orbital_effect$"
  major_orbital_NAME: "$major_orbital$"
  major_orbital_DESC: "$orbital_DESC_GENERIC$"
- major_orbital_MEGASTRUCTURE_DETAILS: "A §Y$major_orbital$§! $orbital_MEGASTRUCTURE_DETAILS_ENDING$"
+ major_orbital_MEGASTRUCTURE_DETAILS: "§Y$major_orbital$§! $orbital_MEGASTRUCTURE_DETAILS_ENDING$"
  major_orbital_CONSTRUCTION_INFO_DELAYED: "$REQUIREMENTS_HEADER$ $major_orbital_requirements$ \n\n$EFFECTS_HEADER$ $NEW_LINE$$orbital_DELAYED_START$$major_orbital_effect$"
  major_orbital_requirements: "$NEW_LINE$- $major_planetary_body_requirements$"
- major_planetary_body_requirements: "Must be built in orbit of a major planetary body"
- orbital_effect: "Depending on planetary deposit:\n$tt$- £mod_district_hab_science_max£ §Y$district_hab_science_plural$§!: §G+3§!\n$tt$- £mod_district_hab_energy_max£ §Y$district_hab_energy_plural$§!: §G+3§!\n$tt$- £mod_district_hab_mining_max£ §Y$district_hab_mining_plural$§!: §G+3§!\n$tt$- £mod_planet_max_buildings_add£ §Y$MOD_PLANET_MAX_BUILDINGS_ADD$§!: §G+0.50§!"
- minor_orbital: "Minor Orbital"
- minor_orbital_plural: "ที่อยู่อาศัยโคจรดาว (รอง)"
+ major_planetary_body_requirements: "จะต้องสร้างขึ้นในวงโคจรของดาวเคราะห์หลัก"
+ orbital_effect: "ขึ้นอยู่กับแหล่งทรัพยากรของดาวเคราะห์:\n$tt$- £mod_district_hab_science_max£ §Y$district_hab_science_plural$§!: §G+3§!\n$tt$- £mod_district_hab_energy_max£ §Y$district_hab_energy_plural$§!: §G+3§!\n$tt$- £mod_district_hab_mining_max£ §Y$district_hab_mining_plural$§!: §G+3§!\n$tt$- £mod_planet_max_buildings_add£ §Y$MOD_PLANET_MAX_BUILDINGS_ADD$§!: §G+0.50§!"
+ minor_orbital: "ที่อยู่อาศัยโคจรดาว (รอง)"
+ minor_orbital_plural: "ที่อยู่อาศัยโคจร (รอง)"
  minor_orbital_effect: "$orbital_effect$"
  minor_orbital_NAME: "$minor_orbital$"
  minor_orbital_DESC: "$minor_orbital_DESC_GENERIC$"
- minor_orbital_MEGASTRUCTURE_DETAILS: "A §Y$minor_orbital$§! $orbital_MEGASTRUCTURE_DETAILS_ENDING$"
+ minor_orbital_MEGASTRUCTURE_DETAILS: "§Y$minor_orbital$§! $orbital_MEGASTRUCTURE_DETAILS_ENDING$"
  minor_orbital_CONSTRUCTION_INFO_DELAYED: "$REQUIREMENTS_HEADER$$minor_orbital_requirements$ \n\n$EFFECTS_HEADER$ $NEW_LINE$$orbital_DELAYED_START$$minor_orbital_effect$"
  minor_orbital_requirements: "$NEW_LINE$- $minor_planetary_body_requirements$"
- minor_planetary_body_requirements: "Must be built in orbit of a minor planetary body (asteroid or moon)"
+ minor_planetary_body_requirements: "จะต้องสร้างขึ้นในวงโคจรของดาวเคราะห์รอง (ดาวเคราะห์น้อยหรือดวงจันทร์)"
  requires_is_minor_planetary_body: "$TRIGGER_FAIL$§R$minor_planetary_body_requirements$§!"
  major_orbital_resource: "Resource Extraction Orbital"
  major_orbital_resource_plural: "Resource Extraction Orbitals"
  minor_orbital_resource: "$major_orbital_resource$"
  minor_orbital_resource_plural: "$major_orbital_resource_plural$"
  major_orbital_mining: "Astro-Mining Orbital"
- major_orbital_mining_plural: "Astro-Mining Orbitals"
+ major_orbital_mining_plural: "สถานีทำเหมืองแร่อวกาศ (โคจร)"
  minor_orbital_mining: "$major_orbital_mining$"
  minor_orbital_mining_plural: "$major_orbital_mining_plural$"
  num_mining_orbitals: "\nCurrent $major_orbital_mining_plural$: §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!"
  major_orbital_science: "Zero-G Research Orbital"
- major_orbital_science_plural: "Zero-G Research Orbitals"
+ major_orbital_science_plural: "สถานีวิจัย Zero-G (โคจร)"
  minor_orbital_science: "$major_orbital_science$"
  minor_orbital_science_plural: "$major_orbital_science_plural$"
  num_science_orbitals: "\nCurrent $major_orbital_science_plural$: §Y[solar_system.GetNumOrbitalsScience]/[solar_system.GetMaxOrbitalsScience]§!"
  major_orbital_energy: "Reactor Orbital"
- major_orbital_energy_plural: "Reactor Orbitals"
+ major_orbital_energy_plural: "สถานีเครื่องปฏิกรณ์โคจร"
  minor_orbital_energy: "$major_orbital_energy$"
  minor_orbital_energy_plural: "$major_orbital_energy_plural$"
  num_energy_orbitals: "\nCurrent $major_orbital_energy_plural$: §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§!"
  major_orbital_generic: "Housing Orbital"
- major_orbital_generic_plural: "Housing Orbitals"
+ major_orbital_generic_plural: "สถานีที่อยู่อาศัยโคจร"
  minor_orbital_generic: "$major_orbital_generic$"
  minor_orbital_generic_plural: "$major_orbital_generic_plural$"
- num_generic_orbitals: "\nCurrent $major_orbital_generic_plural$: §Y[solar_system.GetNumOrbitalsGeneric]/[solar_system.GetMaxOrbitalsGeneric]§!"
+ num_generic_orbitals: "\nปัจจุบัน $major_orbital_generic_plural$: §Y[solar_system.GetNumOrbitalsGeneric]/[solar_system.GetMaxOrbitalsGeneric]§!"
  major_orbital_knights: "Demesne Outpost"
  major_orbital_knights_plural: "Demesne Outposts"
- major_orbital_knights_effect: "£mod_planet_max_districts_add£ Max District Slots: §G+0.50§! \n$t$- £mod_job_knight_add£ Knight Jobs: §G+1§!"
+ major_orbital_knights_effect: "£mod_planet_max_districts_add£ สล็อตช่องเขตสูงสุด: §G+0.50§! \n$t$- £mod_job_knight_add£ งาน Knight: §G+1§!"
  major_orbital_knights_NAME: "$major_orbital_knights$"
  major_orbital_knights_DESC: "$orbital_DESC_GENERIC$"
- major_orbital_knights_MEGASTRUCTURE_DETAILS: "An §Y$major_orbital_knights$§! $orbital_MEGASTRUCTURE_DETAILS_ENDING$"
+ major_orbital_knights_MEGASTRUCTURE_DETAILS: "§Y$major_orbital_knights$§! $orbital_MEGASTRUCTURE_DETAILS_ENDING$"
  major_orbital_knights_CONSTRUCTION_INFO_DELAYED: "$REQUIREMENTS_HEADER$ $NEW_LINE$- $major_planetary_body_requirements$ $NEW_LINE$- §Y$habitat_central_complex$§! must have £building£ §Y$building_order_castle$§! or £building£ §Y$building_order_keep$§!\n\n$EFFECTS_HEADER$ $NEW_LINE$$orbital_DELAYED_START$$major_orbital_knights_effect$"
  requires_knights_castle_or_keep: "$TRIGGER_FAIL$§RRequires a §Y$building_order_castle$§! or §Y$building_order_keep$§!§!"
  edict_extended_healthcare_coverage:0 "ขยายการดูแลสุขภาพเพิ่มเติมและครอบคลุม"
