--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -1378,8 +1378,8 @@
  OPPOSE_PROPOSED:0 "§RClick to not support this Resolution and immediately oppose it, when it moves onto the Senate Floor§!"
  ABSTAIN_PROPOSED:0 "§gClick to not support this Resolution and Abstain from voting on it, when it moves on the Senate Floor§!"
  CANNOT_VOTE_UNTIL:0 "$COUNTRY|Y$ เพิ่งลงคะแนนเสียงในมตินี้ และต้องรออีก £time£ $DAYS|Y$ วัน จึงจะสามารถลงคะแนนได้อีกครั้ง"
- ALREADY_SUPPORTING:0 "$COUNTRY|Y$ is already supporting this Resolution"
- ALREADY_OPPOSING:0 "$COUNTRY|Y$ is already opposing this Resolution"
+ ALREADY_SUPPORTING:0 "$COUNTRY|Y$ ได้สนับสนุนญัตตินี้แล้ว"
+ ALREADY_OPPOSING:0 "$COUNTRY|Y$ กำลังคัดค้านในญัตตินี้อยู่"
  ALREADY_ABSTAINING:0 "$COUNTRY|Y$ ไม่ลงคะแนนเสียง(งดออกเสียง)"
  RESOLUTION_NOT_PROPOSED:0 "$TRIGGER_FAIL$§RYou cannot support a Resolution that has not been proposed yet§!"
  SUPPORTING_PROPOSED:0 "§RClick to withdraw your support for this Resolution§!"
@@ -1609,9 +1609,9 @@
  col_bureau_machine_desc:0 "$col_bureau_desc$"
  col_trophy_machine:0 "Sanctuary World"
  col_trophy_machine_desc:0 "A world dedicated to the care and protection of organic life."
- col_habitat_bureau:1 "Unification Station"
- col_habitat_bureau_desc:1 "An entire habitat dedicated to unifying our empire."
- col_habitat_bureau_spiritualist:0 "Ecclesiastical Station"
+ col_habitat_bureau:1 "สถานีรวมชาติ"
+ col_habitat_bureau_desc:1 "ถิ่นที่อยู่อาศัยทั้งหมดที่อุทิศให้กับการรวมจักรวรรดิของเราเข้าด้วยกัน"
+ col_habitat_bureau_spiritualist:0 "สถานีศูนย์นักบวช"
  col_habitat_bureau_spiritualist_desc:0 "$col_habitat_bureau_desc$"
  col_habitat_bureau_hive:0 "$col_habitat_bureau$"
  col_habitat_bureau_hive_desc:0 "$col_habitat_bureau_desc$"
