--- a/mod/thmod/localisation/english/first_contact_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_l_english.yml
@@ -726,7 +726,7 @@
  district_crashed_slaver_ship:0 "Scavenger Site"
  district_crashed_slaver_ship_plural:0 "Scavenger Sites"
  district_crashed_slaver_ship_desc:0 "$d_crashed_slaver_ship_desc$"
- mod_district_crashed_slaver_ship_max:0 "Max $district_crashed_slaver_ship_plural$"
+ mod_district_crashed_slaver_ship_max:0 "$district_crashed_slaver_ship_plural$ สูงสุด"
  d_crashed_slaver_ship:0 "Crashed Slaver Ship"
  d_crashed_slaver_ship_desc:0 "While debris from the crash is scattered across a massive area, enough of the ship has survived that scavenging it for parts may be of value."
  d_ship_debris_broken_shackles_blocker:0 "ซากยาน"
@@ -2025,7 +2025,7 @@
  requires_not_solarpunk:0 "$TRIGGER_FAIL$Cannon't be built around these planets in this system because of strange hyperlane activity."
  culture_shock_diplomacy:0 "$culture_shock_bronze_age$"
  culture_shock_diplomacy_desc:0 "This pre-FTL civilization is still adjusting to the knowledge that they are not alone in the galaxy."
- culture_shock_diplomacy_effects:0 "Diplomatic Acceptance:§R -100§!"
+ culture_shock_diplomacy_effects:0 "การยอมรับทางการทูต:§R -100§!"
  NO_DIPLOMATIC_CULTURE_SHOCK:0 "$culture_shock_diplomacy$"
  alert_forced_to_decloak_title:0 "Forced to Decloak"
  alert_forced_to_decloak_instant:0 "At least one of our fleets has been forced to Decloak."
