--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -341,7 +341,7 @@
  FTL_MAGNET:0 "ตัวยับยั้ง FTL"
  COMPONENT_FTL_MAGNET_TIP:0 "\n§HFTL Inhibitor§! - Incoming hostile fleets will be forcefully redirected to this station"
  TOOLTIP_SYSTEM_HAS_HOSTILE_FTL_MAGNET:0 "มีตัวยับยั้งการเคลื่อนที่เร็วกว่าแสงมากกว่าหนึ่งตัว"
- TOOLTIP_FLEET_ICON_HAS_FTL_MAGNET:1 "Hostile fleets will be unable to leave the system through any other hyperlane than the one they entered from."
+ TOOLTIP_FLEET_ICON_HAS_FTL_MAGNET:1 "กองยานศัตรูจะไม่สามารถออกจากระบบไปไฮเปอร์เลนอื่นได้ นอกจากทางที่พวกเขาเข้ามาเท่านั้น"
  FLEET_UPGRADE_COST_TOOLTIP:1 "ยาน $SHIPS|Y$ ลำ จะได้รับการอัปเกรด โดยมีค่าใช้จ่ายคือ $COST|Y$"
  FLEET_UPGRADE_NO_COST_TOOLTIP:0 "ยาน $SHIPS|Y$ ลำ จะได้รับการอัปเกรด โดยไม่มีค่าใช้จ่ายเพิ่มเติม"
  STATION_UPGRADE_COST_TOOLTIP:1 "สถานีจะได้รับการอัปเกรด โดยมีค่าใช้จ่ายคือ $COST|Y$"
@@ -373,7 +373,7 @@
  SHIP_STAT_CONTRIBUTION_MULTIPLICATIVE_speed:0 "$NAME$: $VALUE|+=1%$"
  DAMAGE_REDUCTION:0 "การลดความเสียหาย: $VALUE|Y0%$"
  SHIP_SPEED_DAMAGED_PENALTY:0 "$TYPE$ ลดลง $VALUE|+=1%$ เนื่องจากความเสียหายของตัวยาน"
- STAT_SOURCE_SECTION:0 "เซกชัน"
+ STAT_SOURCE_SECTION:0 "เซ็กชัน"
  STAT_SOURCE_WEAPON:0 "อาวุธ"
  STAT_SOURCE_UTILITY:0 "อรรถประโยชน์"
  STAT_SOURCE_STRIKE_CRAFT:0 "โรงเก็บเครื่องยานบิน"
@@ -652,14 +652,14 @@
  MATRIX_LIVESTOCK:0 "ผสาน"
  MATRIX_LIVESTOCK_DESC:0 "ประชากรนี้ถูกรวมเข้ากับเครือข่ายที่เชื่อมต่อพลังงานไฟฟ้าของดาวเคราะห์"
  PURGING:0 "การกวาดล้าง"
- PURGING_DESC:1 "This Pop is being systematically killed off. The process will take some time."
+ PURGING_DESC:1 "ประชากรกลุ่มนี้กำลังถูกฆ่าอย่างเป็นระบบ กระบวนการนี้จะใช้เวลาเล็กน้อยถึงปานกลาง"
  DISPLACING:1 "บังคับให้ย้ายถิ่นฐาน"
  DISPLACING_DESC:1 "This Pop is being forced away from this planet due to Displacement. The relocation process may take some time."
  DISPLACING_DESC_2:0 "This Pop is being forced away from this planet due to empire policies or low habitability. The relocation process may take some time."
  EMIGRATING:0 "กำลังอพยพ"
  EMIGRATING_DESC:0 "This Pop is emigrating from the Planet."
  PURGING_ROBOT:0 "กำลังถอดแยกชิ้นส่วน"
- PURGING_DESC_ROBOT:1 "This Pop is being disassembled. The process will take some time."
+ PURGING_DESC_ROBOT:1 "ประชากรนี้กำลังถูกแยกชิ้นส่วน กระบวนการนี้จะใช้เวลาเล็กน้อยถึงปานกลาง"
  WORMHOLE_INCOMING_DESC:1 "§HWormhole Exit§!\nA Wormhole is open and something is about to come through..."
  WORMHOLE_INCOMING_KNOWN_DESC:1 "§Hรูหนอนออกจาก $SYSTEM|Y$§!\nความคืบหน้า: $CUR|Y$/$MAX|Y$($DAYS|Y$ วัน)\nกองยานในการขนส่ง: $FLEET|Y$"
  WORMHOLE_OUTGOING_DESC:1 "§HWormhole Entrance§!\nA Wormhole is open and ready to transport ships to another star system."
@@ -1109,7 +1109,7 @@
  BUILDABLE_POP_TILE_ALREADY_FULL:0 "There is already a Pop on this Tile."
  UNBUILDABLE_POP:0 "It is not possible to build pops of this type."
  MOVE_POP_NOT_BIO_TROPHY:0 "Bio-Trophies cannot be moved to Tiles that already contain a building."
- ORBITALS:0 "Orbitals"
+ ORBITALS:0 "โคจร"
  DOCKED:0 "Docked"
  EDICT_ENDS_DATE:0 "วันที่สิ้นสุด: $DATE|Y$"
  POPS:0 "ประชากร"
@@ -1885,7 +1885,7 @@
  tc_action:0 "การดำเนินการทางการค้า"
  tc_action_desc:0 "Provide a beneficial Action for the other party."
  tc_loyalty:0 "ความภักดี"
- tc_loyalty_desc:0 "Increase or decrease Loyalty of Subject."
+ tc_loyalty_desc:0 "เพิ่มหรือลดความภักดีของบริวาร"
  tc_open_borders:1 "$TRADE_CATEGORY_OPEN_BORDERS$"
  tc_open_borders_desc:0 "Grant different types of border access."
  TRADE_ITEM_GIFT_RESOURCE_DESC:0 "Sends a sum of $RESOURCE$ immediately when the deal is accepted."
@@ -2886,7 +2886,7 @@
  IGL_CAN_START_NOT_HOST:0 "Only the host can start the game again."
  INGAMELOBBY_KICK:1 "§HKick§!\nKick this player."
  INGAMELOBBY_BAN:1 "§HBan§!\nBan this player. This will make them unable to rejoin."
- pc_gas_giant:0 "แก๊สยักษ์"
+ pc_gas_giant:0 "ดาวแก๊สยักษ์"
  pc_gas_giant_desc:0 "Gaseous planet with an atmosphere primarily composed of hydrogen and helium surrounding a dense core."
  pc_asteroid:0 "ดาวเคราะห์น้อย"
  pc_asteroid_desc:0 "A larger asteroid or planetoid standing out in the dense cluster of smaller bodies."
@@ -2920,7 +2920,7 @@
  pc_savannah_desc:1 "Rocky world dominated by dry, arid plains covered by a nitrogen-oxygen atmosphere. The small hydrosphere allows for brief wet seasons, but aside from a few ubiquitous grasses, vegetation is largely concentrated around shallow oases."
  pc_habitat:0 "ที่อยู่อาศัยวงโคจรดาว"
  pc_habitat_desc:1 "An artificial deep-space arcology offering planet-like - if decidedly urban - living conditions. Hydroponics and advanced filtering technologies make it near-self-sustaining, and station-borne facilities can mine the station's host planet for raw materials."
- pc_toxic:0 "ดาวที่เต็มไปด้วยพิษ"
+ pc_toxic:0 "ดาวพิษ"
  pc_toxic_desc:0 "A rocky planet with a thick atmosphere that is lethal to all known higher forms of life."
  pc_shrouded:0 "ดาวที่ถูกปกคลุมด้วยพลังบางอย่าง"
  pc_shrouded_desc:0 "เซ็นเซอร์ของเราไม่สามารถเจาะผ่านหมอกหนารอบดาวเคราะห์นี้ได้ ยานที่เข้าไปจะไม่สามารถกลับออกมาได้"
@@ -4675,7 +4675,7 @@
  FOCUS_ON_TARGET_NOTIFICATION:0 "§Gคลิกเพื่อไปที่ตำแหน่ง§!"
  FOCUS_ON_LEADER:0 "§HGo To§!\n§GClick to move the camera to where this leader is located§!"
  OPEN_TECH_VIEW:0 "§Gคลิกเพื่อเปิดหน้าต่างเทคโนโลยี§!"
- OB_PROGRESS:0 "Orbital Building Slots Unlocked: "
+ OB_PROGRESS:0 "ช่องสิ่งปลูกสร้างในวงโคจร ที่ถูกปลดล็อก: "
  RENAME_COLONY_TITLE:0 "เปลี่ยนชื่อดาวเคราะห์"
  RENAME_FACTION_TITLE:0 "เปลี่ยนชื่อกลุ่มการเมือง"
  RENAME_FACTION_TOOLTIP:0 "§Hเปลี่ยนชื่อกลุ่มการเมือง§!\n§Gคลิกเพื่อเปลี่ยนชื่อ§!"
@@ -7083,7 +7083,7 @@
  UNCLAIMABLE_SYSTEM_COMMUNICATIONS:1 "สามารถอ้างสิทธิ์ได้เฉพาะระบบภายในอาณาเขตของจักรวรรดิที่รู้จักเท่านั้น"
  UNCLAIMABLE_SYSTEM_INTEL:0 "Cannot claim systems we haven't visited or don't have intel on."
  UNCLAIMABLE_SYSTEM_WAR_ALLY:0 "Cannot claim systems that are claimed by war allies."
- UNCLAIMABLE_SYSTEM_OWNED:1 "Cannot claim your own systems."
+ UNCLAIMABLE_SYSTEM_OWNED:1 "ไม่สามารถอ้างสิทธิ์ระบบของคุณเองได้"
  CLAIM_SYSTEM_RIVALRY_COST:0 "คู่แข่ง: $VALUE|%G0$"
  CLAIM_SYSTEM_WAR_ATTACKER_COST:0 "Offensive War: $VALUE|%R0$"
  CANNOT_REMOVE_CLAIMS_TOO_MANY:0 "เราไม่สามารถลบการอ้างสิทธิ์เกินกว่าที่เรามีได้"
@@ -7231,10 +7231,10 @@
  ACTION_ASK_TO_JOIN_ALLIANCE_TYPE_DESC:0 "We can request to join an existing Alliance."
  ACTION_DEMAND_VASSALIZATION_TYPE:1 "ต้องการให้เป็นเมืองขึ้นของเรา"
  ACTION_DEMAND_VASSALIZATION_TYPE_DESC:1 "We can propose that another Empire becomes our subject."
- ACTION_ASK_TO_BECOME_SUBJUGATED_TYPE:0 "Request to Become Subject"
+ ACTION_ASK_TO_BECOME_SUBJUGATED_TYPE:0 "ขอเป็นบริวาร"
  ACTION_ASK_TO_BECOME_SUBJUGATED_TYPE_DESC:0 "We can request to be the subject of another Empire."
  ACTION_ASK_TO_BECOME_SUBJUGATED_OFFER_DESC:0 "§H[Actor.GetName]§! has requested to become our subject."
- ACTION_ASK_TO_BECOME_VASSALIZED_TYPE:1 "Request to Become Subject"
+ ACTION_ASK_TO_BECOME_VASSALIZED_TYPE:1 "ขอเป็นบริวาร"
  ACTION_ASK_TO_BECOME_VASSALIZED_TYPE_DESC:1 "We can request to be the subject of another Empire."
  ACTION_ASK_TO_BECOME_VASSALIZED_OFFER_DESC:1 "§H[Actor.GetName]§! has requested to become our subject."
  ACTION_FORM_FEDERATION_TYPE:0 "จัดตั้งสหพันธ์"
@@ -7389,9 +7389,9 @@
  ACTION_EMBASSY_COST:3 "This will improve the effectiveness of friendly envoys and increase intel targets of one another."
  ACTION_EMBASSY_PROPOSAL_FAILED_ACTOR:0 "§H[Recipient.GetName]§! declined to establish embassies."
  ACTION_EMBASSY_PROPOSAL_FAILED_RECIPIENT:0 "The embassy proposal from §H[Actor.GetName]§! timed out and was auto-declined."
- ACTION_RECALL_EMBASSY_OFFER_DESC:0 "Recall our embassy from their capital planet. The intelligence gathered will decay over time."
+ ACTION_RECALL_EMBASSY_OFFER_DESC:0 "เรียกทูตของเราจากดาวศูนย์กลางจักรวรรดิของพวกเขา ข่าวกรองที่รวบรวมไว้จะหายไปตามกาลเวลา"
  ACTION_RECALL_EMBASSY_TITLE:0 "เรียกทูตกลับ"
- ACTION_RECALL_EMBASSY_DESC:3 "Recall our embassy from their capital planet. The intelligence gathered will decay over time."
+ ACTION_RECALL_EMBASSY_DESC:3 "เรียกทูตของเราจากดาวศูนย์กลางจักรวรรดิของพวกเขา ข่าวกรองที่รวบรวมไว้จะหายไปตามกาลเวลา"
  ACTION_RECALL_EMBASSY_COST:1 "$ACTION_RECALL_EMBASSY_DESC$"
  ACTION_MAKE_RIVAL_TITLE:0 "ประกาศเป็น $RIVALRY$"
  ACTION_MAKE_RIVAL_DESC:0 "ประกาศ §H[Recipient.GetName]§! ให้เป็น $RIVAL$ ของเรา"
@@ -7558,7 +7558,7 @@
  ACTION_BREAK_GUARANTEE_TYPE:0 "ยกเลิกการรับรองเอกราช"
  ACTION_BREAK_GUARANTEE_TYPE_DESC:0 "หยุดการรับรองเอกราชของจักรวรรดินี้"
  ACTION_GUARANTEE_INDEPENDENCE_TITLE:0 "รับรองเอกราช"
- ACTION_GUARANTEE_INDEPENDENCE_DESC:0 "Guarantee the independence of this Empire. If they are attacked, we will automatically come to their defense."
+ ACTION_GUARANTEE_INDEPENDENCE_DESC:0 "การรับประกันความเป็นอิสระของจักรวรรดินี้ หากพวกเขาถูกโจมตีเราจะทำช่วยป้องกันพวกเขาโดยอัตโนมัติ"
  ACTION_BREAK_GUARANTEE_TITLE:0 "ยกเลิกการรับรองเอกราช"
  ACTION_BREAK_GUARANTEE_DESC:0 "หยุดการรับรองเอกราชของจักรวรรดินี้"
  ACTION_SUPPORT_INDEPENDENCE_TYPE:0 "สนับสนุนเอกราช"
@@ -9620,7 +9620,7 @@
  ENIGMATIC_DISRUPTION_FIELD:0 "Enigmatic Disruption Field"
  ENIGMATIC_DISRUPTION_FIELD_DESC:0 "$tech_enigmatic_disruption_field_desc$"
  STRANGE_COMPONENTS:0 "Strange Component"
- STRANGE_COMPONENTS_DESC:0 "Our scientists can make no sense of these."
+ STRANGE_COMPONENTS_DESC:0 "นักวิทยาศาสตร์ของเราไม่สามารถเข้าใจสิ่งนี้ได้"
  DRAGON_WEAPON:1 "Dragon's Breath"
  DRAGON_WEAPON_DESC:0 "$STRANGE_COMPONENTS_DESC$"
  DRAGON_WEAPON_ICE:0 "$DRAGON_WEAPON$"
@@ -9919,7 +9919,7 @@
  INFLUENCE_MAINTENANCE_TOOLTIP:1 "ค่าอิทธิพลที่ใช้รายเดือน: "
  EDICTS_LABEL:0 "Manage our Empire and planet Edicts here."
  CLICK_TO_ADD_EDICT:1 "§Gคลิกเพื่อเปิดใช้งานคำสั่งนี้§!"
- CLICK_TO_REMOVE_EDICT:1 "§GClick to deactivate this Edict§!"
+ CLICK_TO_REMOVE_EDICT:1 "§Gคลิกเพื่อยกเลิกประกาศคำสั่งนี้§!"
  EDICT_LOCK_IN_PERIOD_REMAINING:0 "Remaining time before edict can be deactivated: §H$MONTHS$ months§!."
  EDICT_LOCK_IN_DURATION:0 "Can not be cancelled for §H$MONTHS$ months§! when activated."
  EMPIRE_EDICT_TOOLTIP:0 "§GClick to see all available§! §HEmpire§! §GEdicts§!"
@@ -11407,7 +11407,7 @@
  SUBJECT_protectorate:0 "จักรวรรดิในอารักขา"
  SUBJECT_DESC_protectorate:5 "จักรวรรดิในอารักขาจะได้รับการประกันเอกราชโดยจักรวรรดิเจ้าเหนือหัว โดยจักรวรรดิเจ้าเหนือหัวจะจ่ายค่าวิจัยเทคโนโลยีให้จักรวรรดิในอารักขา §Y80%§! และจักรวรรดิในอารักขาจะเปลี่ยนสถานะเป็นบริวารถ้าระดับเลเวลของเทคโนโลยีมากกว่าหรือเท่ากับ §Y50%§! เมื่อเทียบกับเจ้าเหนือหัว"
  SUBJECT_DESC_tributary:0 "Tributaries are a type of subject which is mostly independent but pays §Y25%§! of their monthly Energy Credits and Minerals in tribute to their Overlord."
- OPEN_COMBAT_STATS:0 "§GClick to open Combat Stats§!"
+ OPEN_COMBAT_STATS:0 "§Gคลิกเพื่อเปิดข้อมูลการรบ§!"
  SUBJECT_tributary:0 "จักรวรรดิบรรณาการ"
  SUBJECT_thrall:0 "ทาส"
  SUBJECT_DESC_thrall:1 "Thralls are a type of subject which is diplomatically independent but pays §Y25%§! of their monthly Energy Credits and Minerals in tribute to their Overlord. They are also forbidden from expanding into new systems except through conquest."
@@ -11967,8 +11967,8 @@
  resource_usage_tooltip_title: "ใช้ £$icon$£ $name$ อัตโนมัติ"
  resource_usage_tooltip: "£trigger_yes£ ระบบบริหารดาวเคราะห์อัตโนมัติ ได้รับอนุญาตให้ใช้ £$icon$£ $name$ เมื่อสร้างบนดาวเคราะห์"
  resource_usage_tooltip_neg: "£trigger_no£ ระบบบริหารดาวเคราะห์อัตโนมัติ ไม่ได้รับอนุญาตให้ใช้ £$icon$£ $name$ เมื่อสร้างบนดาวเคราะห์"
- MOD_VERSION:0 "Mod v0.70.3, Update 30/09/2023"
- MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - World เดิมใช้(โลก) -> เปลี่ยนเป็น(ดาว) *บางคำยังใช้โลกอยู่ แต่ส่วนใหญ่จะใช้คำว่าดาว\n - The Shroud -> ดินแดนพลังจิตบริสุทธิ์/อาณาจักรแห่งพลังจิตบริสุทธิ์\n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
+ MOD_VERSION:0 "Mod v0.70.4, Update 06/10/2023"
+ MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - World เดิมใช้(โลก) -> เปลี่ยนเป็น(ดาว) *บางคำยังใช้โลกอยู่ แต่ส่วนใหญ่จะใช้คำว่าดาว\n - The Shroud -> ดินแดนพลังจิตบริสุทธิ์/อาณาจักรแห่งพลังจิตบริสุทธิ์\n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
  MOD_TEST2DUMMY2:0 "dummy2"
