--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -104,8 +104,8 @@
  leviathans.105.c.sr3:0 "We already have a §YMuutagan Trade Deal§!\n"
  leviathans.105.c.trust:0 "ต้องการ §YTrader Enclave§! ให้มี:\n£opinion£ ทัศนคติ +50\n"
  leviathans.105.d:0 "ไม่มีอะไรในตอนนี้ ลาก่อน"
- leviathans.105.z:1 "เราต้องการจ้าง §Yที่ปรึกษา§!"
- trader_tt_governor:1 "Hire a [enclave_country.GetAdj] §YGovernor§!."
+ leviathans.105.z:1 "เราต้องการว่าจ้าง §Yที่ปรึกษา§!"
+ trader_tt_governor:1 "ว่าจ้าง §Yผู้ว่าการ§! [enclave_country.GetAdj]"
  leviathans.110.a.reply:0 "Thank you for your business. Please come again!"
  leviathans.110.b.reply:0 "An excellent choice. You will not be disappointed by the quality of our minerals."
  leviathans.110.c.reply:0 "Big spender, eh? Looks like we can close early today!"
@@ -121,7 +121,7 @@
  leviathans.126.desc:0 "Excellent! We are happy to share our skills with the [Root.GetName]."
  leviathans.126.desc.alt: "Excellent! May we both profit from each other's... distinct approach to commerce."
  already_hired_trader_governor:2 "§RWe have already recruited a leader from the [enclave_country.GetName]§!."
- recruit_trader_leader:1 "Adds a [enclave_country.GetAdj] §YGovernor§! with a §YTrader Liaison Trait§! to the §HLeaders§! pool."
+ recruit_trader_leader:1 "เพิ่ม §Yผู้ว่าการ§! [enclave_country.GetAdj] ที่มี §Yคุณลักษณะเทรดเดอร์ผู้ประสานงาน§! ในกลุ่ม §Hผู้นำ§!"
  requires_trader_enclave:0 "§RRequires a §YTrader Enclave§! in the system.§!"
  sm_trader_proxy_office:0 "Trader Proxy Office"
  sm_trader_proxy_office_desc:0 "The §YTrader Enclaves§! enjoy special privileges on the Galactic Market, which can also benefit us."
@@ -141,12 +141,12 @@
  leader_trait_muutagan_liaison_desc: "Recruited from the Muutagan Merchant Guild, this Governor owns several private Rare Crystal mines."
  muutagan_trader_desc: "$leader_trait_muutagan_liaison_desc$"
  muutagan_trader_catch_phrase: "$trader_catch_phrase$"
- councilor_enclave_trader: "Trader Liaison"
+ councilor_enclave_trader: "เทรดเดอร์ผู้ประสานงาน"
  councilor_enclave_trader_female: "$councilor_enclave_trader$"
  councilor_enclave_trader_desc: "A liaison from one of the three hubs of galactic commerce sits on the council, granting insider information on brokerages across the galaxy."
  councilor_enclave_trader_unlock_title: "§HCouncil Position from the $NAME_Muutagan_Merchant_Guild$, $NAME_Riggan_Commerce_Exchange$, or $NAME_XuraCorp$§!"
- councilor_enclave_trader_conditional_tooltip: "Leader has a §YTrader Liaison§! Trait."
- unlocks_trader_council_position: "\n§EAllows the unlocking of Council Position:§!\n§H$t$$councilor_enclave_trader$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$MOD_TRADE_VALUE_MULT$: §G+2%§!\n$ttt$$MOD_COUNTRY_TRADE_FEE$ §G-1%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$governor_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_enclave_trader_conditional_tooltip$"
+ councilor_enclave_trader_conditional_tooltip: "ผู้นำมีคุณลักษณะ §Yเทรดเดอร์ผู้ประสานงาน§!"
+ unlocks_trader_council_position: "\n§Eปลดล็อกตำแหน่งในสภา:§!\n§H$t$$councilor_enclave_trader$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$MOD_TRADE_VALUE_MULT$: §G+2%§!\n$ttt$$MOD_COUNTRY_TRADE_FEE$ §G-1%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$governor_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_enclave_trader_conditional_tooltip$"
  leviathans.131.desc:3 "The §YVolatile Mote§! is a prized Riggan condiment. It is renowned throughout the galaxy for its distinct flavor, which is unlike any other - and its explosiveness, which is also unlike any other. We sell it only to our most valued trading partners, among which we count the [Root.GetName].\n\nIf you can meet our modest price, we are willing to export Volatile Motes to you for a period of ten standard years."
  leviathans.131.a.reply:1 "You will not be sorry. Unless you consume too much spice, of course... Then there is a small chance that you will spontaneously combust. A very small chance, to be sure."
  leviathans.130.desc:4 "This is a product that we here at XuraCorp are particularly proud of. Our Medical Division has recently begun refining a gas with unique properties that will significantly ease the often difficult process of adapting to a foreign planetary environment. It is however unlikely to be compatible with alien physiology!\n\nWe are willing to export our §YExotic Gas§! to you for a period of ten standard years, after which the contract will have to be renegotiated."
@@ -203,9 +203,9 @@
  leviathans.144.a:0 "A significant trade disruption."
  leviathans.144.b:0 "Our crystals! This must not go unanswered!"
  leviathans.150.desc:1 "Dearest customer, we regret to inform you that the trade deal we negotiated for the export of Exotic Gas to the worlds of the [Root.GetName] has run its course. We are of course more than willing to extend the deal for another ten years if you have the energy credits to spare..."
- leviathans.150.a:0 "Very well. We wish to extend the deal."
- leviathans.150.b:1 "We can do without your gas for now."
- leviathans.150.c:0 "We can't afford to continue this deal."
+ leviathans.150.a:0 "ดีมาก เราต้องการต่อสัญญาข้อตกลงก่อนหน้านี้"
+ leviathans.150.b:1 "เราจำเป็นไม่ต้องใช้แก๊สของคุณในตอนนี้"
+ leviathans.150.c:0 "เราไม่สามารถทำข้อตกลงนี้ต่อได้"
  leviathans.151.desc:1 "We have reached the end of our agreement, [Root.GetSpeciesName]. We have shipped Volatile Motes to your worlds for ten years. Should we continue for another ten, or do you wish to end this arrangement?"
  leviathans.151.a:1 "Let us continue. The motes must flow."
  leviathans.151.b:0 "We have no need of your spice for now."
@@ -919,6 +919,6 @@
  councilor_curator_archivist_desc: "An archivist from the $NAME_Curator_Order$ serves on the council, sharing the accumulated knowledge of eons."
  councilor_curator_archivist_unlock_title: "§HCouncil Position from the $NAME_Curator_Order$§!"
  councilor_curator_archivist_conditional_tooltip: "Leader has the §Y$leader_trait_curator$§! Trait."
- unlocks_curator_council_position: "\n§EAllows the unlocking of Council Position:§!\n§H$t$$councilor_curator_archivist$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$MOD_ASSIST_RESEARCH_MULT$: §G+5%§!\n$ttt$$mod_planet_researchers_upkeep_mult$ §G-2%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$scientist_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_curator_archivist_conditional_tooltip$"
+ unlocks_curator_council_position: "\n§Eปลดล็อกตำแหน่งในสภา:§!\n§H$t$$councilor_curator_archivist$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$MOD_ASSIST_RESEARCH_MULT$: §G+5%§!\n$ttt$$mod_planet_researchers_upkeep_mult$ §G-2%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$scientist_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_curator_archivist_conditional_tooltip$"
  curator_archivist_desc: "$leader_trait_curator_desc$"
  curator_archivist_catch_phrase: "§L"Together we shall uncover secrets long forgotten."§!"
