--- a/mod/thmod/localisation/english/marauder_l_english.yml
+++ b/mod/thmod/localisation/english/marauder_l_english.yml
@@ -225,8 +225,8 @@
  marauder.107.a:0 "Our bio-trophies!"
  marauder.108.desc:0 "[marauder_country.GetSpeciesName] raiding parties have made planetfall on §H[Root.GetName]§!! The raiders plundered several of our outposts on the [Root.GetPlanetMoon] and slaughtered hundreds of drones before they retreated back to their orbiting fleet."
  marauder.108.a:0 "We must punish this transgression."
- marauder.112.a:0 "Who paid you to raid us?"
- marauder.112.1.a.response:0 "Pitiful cowards who were unwilling to face you themselves. Their identity is meaningless, and their ultimate role in the universe even more so.\n\nAnd they paid well for us to keep their identity to ourselves."
+ marauder.112.a:0 "ใครจ่ายเงินให้คุณโจมตีเรา?"
+ marauder.112.1.a.response:0 "คนขี้ขลาดที่น่าสงสารที่ไม่เต็มใจที่จะเผชิญหน้ากับคุณ Their identity is meaningless, and their ultimate role in the universe even more so.\n\nAnd they paid well for us to keep their identity to ourselves."
  marauder.112.2.a.response:0 "Ah, but that secret, dwamak! They were dwamaks, like yourself, but other dwamaks. That all we can say."
  marauder.112.3.a.response:0 "Infidels. Unbelievers. Heretics.\n\nWe would just as soon have nothing to do with them, but their energy credits will help to further Her will."
  marauder.112.b:0 "สิ้นสุดการส่ง"
@@ -240,10 +240,10 @@
  marauder.117.a:0 "Cowards!"
  marauder.120.name:0 "Incoming [raiding_marauder.GetSpeciesName] Raid"
  marauder.120.desc:0 "A §H[raiding_marauder.GetSpeciesName]§! raiding fleet has been detected approaching our borders! Intercepted communications indicate that they have been hired by a rivalling foreign power to attack our systems. They are transmitting a message directed towards us on an open channel."
- marauder.121.1.desc:0 "Cowards huddling in darkness have asked us to face you, since they are too afraid to do so themselves. Are there any [Root.GetSpeciesName] warriors honorable enough to meet us in open battle, then, or must we plunder your systems unopposed? Show us your worth!"
+ marauder.121.1.desc:0 "คนขี้ขลาดที่รวมตัวกันในเงามืดขอให้เราเผชิญหน้าคุณ เพราะพวกเขากลัวเกินกว่าจะทำเช่นนั้นด้วยตัวของพวกเขาเอง จะมีนักรบชาว [Root.GetSpeciesName] คนใดบ้าง? ที่มีเกียรติพอที่จะพบเราในสนามรบแบบเปิดเผย หรือเราต้องปล้นระบบดาวของคุณโดยไม่มีใครต่อต้าน? แสดงให้เราเห็นความสามารถของคุณ!"
  marauder.121.2.desc:0 "HYEEEIIIEEE!!! You have many enemies, dwamak! They not like you very much! Even pay us to bash your systems! We happy to oblige!"
  marauder.121.3.desc:0 "If one group of unbelievers wants us to smite another group of unbelievers, and are willing to pay us for it, who are we to say no? In time, the servants of She of the Void will deal with all heretics, but for now we shall focus on you."
- marauder.121.a:0 "Go to red alert!"
+ marauder.121.a:0 "การโจมตีใกล้เข้ามาแล้ว!"
  marauder.122.name:0 "[raid_parent.GetSpeciesName] Raiders Withdraw"
  marauder.122.desc:0 "The raiding fleet that the §H[raid_parent.GetSpeciesNamePlural]§! sent into the §H[raid_victim.GetName]§! after we "encouraged" them to do so has set a course back to their home system. With the fleet's cargo holds full of captured loot and slaves, the ship masters have declared the raid successfully concluded."
  marauder.122.a:0 "A job well done."
