--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -283,8 +283,8 @@
  MIGRATION_LIST_OVERFLOW:0 " and $NUM|Y$ more"
  PLANET_NO_MIGRATION:0 "There is currently no Migration on this planet."
  HOUSING_EFFECTS:0 "§Hผลจาก$HOUSING$§!"
- DISABLED_JOB:0 "Disabled Job"
- DISABLED_JOB_DESC:0 "This $JOB|Y$ Job has been §Rdisabled§! and cannot be worked by a Pop. Increase the Job Priority to enable it again."
+ DISABLED_JOB:0 "อาชีพถูกปิดไม่ให้ทำ"
+ DISABLED_JOB_DESC:0 "อาชีพ $JOB|Y$ นี้ §Rถูกปิด§! และประชากรไม่สามารถทำงานได้ เพิ่มลำดับความสำคัญของอาชีพ เพื่อเปิดใช้งานอีกครั้ง"
  FREE_JOB:0 "อาชีพที่ยังว่างอยู่"
  FREE_JOB_DESC:0 "อาชีพ $JOBS|Y$ มีตำแหน่งงานที่ว่างอยู่ $NUM_FREE|Y$ ตำแหน่ง บนดาวเคราะห์ดวงนี้ สามารถเติมเต็มได้ด้วยประชากรที่ตรงตามเกณฑ์สำหรับการทำงานในอาชีพนี้"
  ETHIC_PLANET_FRACTION:0 "- $FRACTION|%Y0$ ของ £pop£ ประชากรบนดาว $PLANET|Y$ มีจริยธรรมนี้\n- £happiness£ §Y$HAPPINESS$§! เฉลี่ยโดยของประชากร $ETHIC|Y$ บนดาวนี้คือ $VALUE$"
@@ -304,7 +304,7 @@
  PLANET_AMENITIES_POPS_USAGE:0 "ใช้ความอยู่ดีกินดีของประชากร (£pop£ $NUM_POPS|Y$): $VALUE|R0$"
  PLANET_AMENITIES_PRODUCED:0 "ความอยู่ดีกินดีที่เตรียมไว้: $VALUE|G0$"
  PLANET_DISTRICTS_AVAILABLE:0 "ช่องเขตที่ว่าง: $VALUE|0$"
- PLANET_DISTRICTS_BUILT: "Used District Slots: $VALUE|Y$"
+ PLANET_DISTRICTS_BUILT: "ใช้ช่องสล็อตเขตไปแล้ว: $VALUE|Y$"
  PLANET_NUM_DISTRICTS_UNCAPPED:0 "$PLANET|Y$ มี $NAME$ $AMOUNT|Y$"
  PLANET_NUM_DISTRICTS_CAPPED:0 "$PLANET|Y$ มี $NAME$ $AMOUNT|Y$ จากทั้งหมดที่เป็นไปได้ $MAX|Y$"
  PLANET_NUM_DISTRICT_BLOCKERS_NONE:0 "$PLANET|Y$ has no £blocker£ §YBlockers§! preventing the construction of additional $NAME$"
@@ -608,18 +608,18 @@
  district_hab_energy:0 "เขตเครื่องปฏิกรณ์"
  district_hab_energy_plural:0 "เขตเครื่องปฏิกรณ์"
  district_hab_energy_desc:1 "Habitat-side energy production plant districts generate energy credits, as well as provide power to the arcology on which they are built."
- district_hab_science:1 "Zero-G Research District"
- district_hab_science_plural:1 "Zero-G Research Districts"
+ district_hab_science:1 "เขตวิจัย Zero-G"
+ district_hab_science_plural:1 "เขตวิจัย Zero-G"
  district_hab_science_desc:1 "Centers of scientific discovery, these habitat districts employ researchers from myriad fields of study."
  district_hab_industrial:0 "เขตอุตสาหกรรม"
  district_hab_industrial_plural:0 "เขตอุตสาหกรรม"
  district_hab_industrial_desc:0 "Industrial machinery fills this habitat district, taking full advantage of the benefits of low gravity."
  district_hab_mining:0 "$building_hab_astro_mining_facility$"
- district_hab_mining_plural:0 "Astro-Mining Bays"
+ district_hab_mining_plural:0 "พื้นที่ทำเหมืองแร่ในอวกาศ"
  district_hab_mining_desc:1 "$building_hab_astro_mining_facility_desc$"
- mod_district_hab_science_max: "Max $district_hab_science_plural$"
- mod_district_hab_mining_max: "Max $district_hab_mining_plural$"
- mod_district_hab_energy_max: "Max $district_hab_energy_plural$"
+ mod_district_hab_science_max: "$district_hab_science_plural$ สูงสุด"
+ mod_district_hab_mining_max: "$district_hab_mining_plural$ สูงสุด"
+ mod_district_hab_energy_max: "$district_hab_energy_plural$ สูงสุด"
  building_foundry_2_effect_desc:2 "Increases the base production of £alloys£ §YAlloys§! producing jobs by §G1§!, with a corresponding increase in upkeep."
  building_foundry_3_effect_desc:1 "Increases the base production of £alloys£ §YAlloys§! producing jobs by §G2§!, with a corresponding increase in upkeep."
  building_factory_2_effect_desc:2 "Increases the base production of £consumer_goods£ §YConsumer Goods§! producing jobs by §G1§!, with a corresponding increase in upkeep."
@@ -2912,13 +2912,13 @@
  col_habitat_factory_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการผลิตสินค้าอุปโภคบริโภคในห้วงอวกาศ"
  col_habitat_factory_custom:1 "§Yเขตอุตสาหกรรม§! จะเปลี่ยนหนึ่งอาชีพจากการผลิตโลหะผสมเป็นผลิตสินค้าอุปโภคบริโภคถ้าเป็นไปได้\n\n"
  col_habitat_industrial:0 "สถานีอุตสาหกรรม"
- col_habitat_industrial_desc:0 "An artificial deep-space arcology dedicated to balanced alloy and consumer good production."
+ col_habitat_industrial_desc:0 "มหานครที่ถูกสร้างขึ้นในอวกาศเพื่อผลิตโลหะผสมและสินค้าอุปโภคบริโภค"
  col_habitat_refinery:0 "สถานีสกัด"
  col_habitat_refinery_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการผลิตทรัพยากรสำคัญทางยุทธศาสตร์ในห้วงอวกาศ"
  col_habitat_mining:0 "สถานีขุดแร่"
  col_habitat_mining_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการเก็บแร่ในห้วงอวกาศ"
  col_habitat_farming:0 "สถานีปลูกพืชไร้ดิน"
- col_habitat_farming_desc:0 "An artificial deep-space arcology dedicated to the growing of crops"
+ col_habitat_farming_desc:0 "มหานครที่ถูกสร้างขึ้นในอวกาศเพื่อเพิ่มการเจริญเติบโตของพืช"
  col_habitat_gestalt_farming:0 "$col_habitat_farming$"
  col_habitat_gestalt_farming_desc:0 "$col_habitat_farming_desc$"
  col_habitat_energy:0 "สถานีกำเนิดพลังงาน"
