--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -150,18 +150,18 @@
  MESSAGE_INVITE_TO_ALLIANCE_TITLE:0 "Alliance Invitation"
  MESSAGE_KICK_FROM_ALLIANCE_TITLE:0 "Alliance Member Kicked"
  MESSAGE_KICK_FROM_FEDERATION_TITLE:0 "สมาชิกถูกขับออกจากสหพันธ์"
- MESSAGE_ASK_TO_JOIN_ALLIANCE_TITLE:0 "Join Alliance Request"
+ MESSAGE_ASK_TO_JOIN_ALLIANCE_TITLE:0 "คำขอเข้าร่วมเป็นพันธมิตร"
  MESSAGE_LEAVE_ALLIANCE_TITLE:0 "สมาชิกพันธมิตรออก"
  DIPLO_ACTION_LEAVE_ALLIANCE_DESC:0 "$COUNTRY|Y$ ออกจาก $ALLIANCE|Y$"
  DIPLO_ACTION_LEAVE_FEDERATION_DESC:0 "$COUNTRY|Y$ ออกจาก $ALLIANCE|Y$"
  MESSAGE_DEMAND_SUBJUGATION_TITLE:1 "ต้องการให้เป็นบริวาร(เมืองขึ้น)"
  MESSAGE_ASK_TO_BECOME_SUBJUGATED_TITLE:1 "ความต้องการลังจากการพิชิต"
- MESSAGE_ASK_TO_BE_RELEASED_SUBJECT_TITLE:0 "Subject Release Request"
+ MESSAGE_ASK_TO_BE_RELEASED_SUBJECT_TITLE:0 "คำขอให้ปลดปล่อยบริวาร"
  MESSAGE_FORM_FEDERATION_TITLE:0 "คำขอจัดตั้งสหพันธ์"
  MESSAGE_INVITE_TO_FEDERATION_TITLE:0 "คำเชิญของสหพันธ์"
  MESSAGE_ASK_TO_JOIN_FEDERATION_TITLE:0 "เข้าร่วมตามคำขอของสหพันธ์"
  MESSAGE_LEAVE_FEDERATION_TITLE:0 "ออกจากสหพันธ์"
- MESSAGE_OFFER_TRADE_DEAL_TITLE:0 "Trade Deal Offer"
+ MESSAGE_OFFER_TRADE_DEAL_TITLE:0 "ข้อตกลงทางการค้า"
  MESSAGE_REQUEST_WAR_TITLE:0 "War Request"
  MESSAGE_PROPOSE_INVITE_TITLE:0 "Invite Proposal"
  MESSAGE_ASK_TO_BECOME_RELEASED_SUBJECT_TITLE:0 "Release Subject Request"
@@ -182,9 +182,9 @@
  MESSAGE_FORM_MIGRATION_PACT_TITLE:0 "ข้อเสนอสนธิสัญญาการย้ายถิ่น"
  MESSAGE_BREAK_MIGRATION_PACT_TITLE:0 "ข้อเสนอสนธิสัญญาการย้ายถิ่นถูกทำลาย"
  MESSAGE_GUARANTEE_INDEPENDENCE_TITLE:0 "รับรองเอกราช"
- MESSAGE_BREAK_GUARANTEE_TITLE:0 "Guarantee Revoked"
- MESSAGE_SUPPORT_INDEPENDENCE_TITLE:0 "Independence Supported"
- MESSAGE_BREAK_SUPPORT_TITLE:0 "Support Revoked"
+ MESSAGE_BREAK_GUARANTEE_TITLE:0 "การรับประกันถูกเพิกถอน"
+ MESSAGE_SUPPORT_INDEPENDENCE_TITLE:0 "อิสรภาพได้รับการสนับสนุน"
+ MESSAGE_BREAK_SUPPORT_TITLE:0 "การสนับสนุนถูกยกเลิก"
  MESSAGE_OPEN_BORDERS_TITLE:0 "เปิดพรมแดนแล้ว"
  MESSAGE_CLOSE_BORDERS_TITLE:0 "พรมแดนถูกปิด"
  MESSAGE_FORM_SOCIETAL_ENLIGHTENMENT_PACT_TITLE:0 "Societal Enlightenment Invitation"
@@ -227,7 +227,7 @@
  ACTION_FORM_MIGRATION_PACT_NOTIFICATION:1 "§H[From.GetName]§! ทำสนธิสัญญาการย้ายถิ่นฐานกับ §H[Root.GetName]§!\n\nตอนนี้ประชากรของพวกเขาสามารถเคลื่อนย้ายได้อย่างอิสระระหว่างสองจักรวรรดิ"
  ACTION_BREAK_MIGRATION_PACT_NOTIFICATION:1 "§H[From.GetName]§! ยกเลิกสนธิสัญญาการย้ายถิ่นฐานที่ทำกับ §H[Root.GetName]§!\n\nดูเหมือนว่าพวกเขาจะเสียดายกับการเปิดเขตแดนต่อกัน"
  ACTION_GUARANTEE_INDEPENDENCE_NOTIFICATION:1 "§H[From.GetName]§! ตอนนี้จะรับประกันความเป็นอิสระของ §H[Root.GetName]§!\n\nตอนนี้พวกเขาจะปกป้องอีกฝ่ายจากการโจมตีทั้งหมด"
- ACTION_BREAK_GUARANTEE_NOTIFICATION:1 "§H[From.GetName]§! stopped guaranteeing the independence of §H[Root.GetName]§!.\n\nThis may represent opportunity for us..."
+ ACTION_BREAK_GUARANTEE_NOTIFICATION:1 "§H[From.GetName]§! หยุดรับประรองความเป็นอิสระของ §H[Root.GetName]§!\n\nนี่อาจเป็นโอกาสสำหรับเรา..."
  ACTION_SUPPORT_INDEPENDENCE_NOTIFICATION:1 "§H[From.GetName]§! will now support the independence of §H[Root.GetName]§!.\n\nTheir overlord must be none too pleased..."
  ACTION_BREAK_SUPPORT_NOTIFICATION:1 "§H[From.GetName]§! stopped supporting the independence of §H[Root.GetName]§!.\n\nIt seems [Root.GetName] is destined to remain a subject."
  ACTION_OPEN_BORDERS_NOTIFICATION:1 "§H[From.GetName]§! opened their borders to the fleets of §H[Root.GetName]§!.\n\nThis will improve their diplomatic relations."
