--- a/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
@@ -276,7 +276,7 @@
  councilor_master_salvager_desc: "$master_salvager_desc$"
  councilor_master_salvager_unlock_title: "§HCouncil Position from the [salvager_enclave_country.GetName]§!"
  councilor_master_salvager_conditional_tooltip: "Leader has the §Y$leader_trait_master_salvager$§! Trait."
- unlocks_salvager_council_position: "\n§EAllows the unlocking of Council Position:§!\n§H$t$$councilor_master_salvager$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$MOD_COUNTRY_SCAVENGE_DEBRIS_MULT$: §G+10%§!\n$ttt$$MOD_SHIP_FRIENDLY_TERRITORY_ARMOR_MULT$: §G+2%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$scientist_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_master_salvager_conditional_tooltip$"
+ unlocks_salvager_council_position: "\n§Eปลดล็อกตำแหน่งในสภา:§!\n§H$t$$councilor_master_salvager$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$MOD_COUNTRY_SCAVENGE_DEBRIS_MULT$: §G+10%§!\n$ttt$$MOD_SHIP_FRIENDLY_TERRITORY_ARMOR_MULT$: §G+2%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$scientist_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_master_salvager_conditional_tooltip$"
  master_salvager_already_bought: "§RWe have already purchased the services of a $master_salvager$.§!"
  master_salvager_explanation: "\nWe will hire a Level 5 Scientist with the §Y$leader_trait_master_salvager$§! Trait."
  enclave.360.name:0 "Reclaimed Bounty"
@@ -785,7 +785,7 @@
  councilor_shroudwalker_teacher_desc: "An adept of the [shroudwalker_enclave_country.GetName] serves on the council, instructing in the ways of the Shroud."
  councilor_shroudwalker_teacher_unlock_title: "§HCouncil Position from the [shroudwalker_enclave_country.GetName]§!"
  councilor_shroudwalker_teacher_conditional_tooltip: "Leader has the §Y$leader_trait_shroudwalker$§! Trait."
- unlocks_shroudwalker_council_position: "\n§EAllows the unlocking of Council Position:§!\n§H$t$$councilor_shroudwalker_teacher$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$mod_category_psionics_draw_chance_mult$: §G+5%§!\n$ttt$$mod_country_unity_produces_mult$ §G+1%§!\n$ttt$$mod_shroud_delve_cost$: §G-2%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$governor_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_shroudwalker_teacher_conditional_tooltip$"
+ unlocks_shroudwalker_council_position: "\n§Eปลดล็อกตำแหน่งในสภา:§!\n§H$t$$councilor_shroudwalker_teacher$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$mod_category_psionics_draw_chance_mult$: §G+5%§!\n$ttt$$mod_country_unity_produces_mult$ §G+1%§!\n$ttt$$mod_shroud_delve_cost$: §G-2%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$governor_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_shroudwalker_teacher_conditional_tooltip$"
  enclave.8000.name: "Attack on [FROM.GetName]"
  enclave.8000.start: "Following our attack on the [FROM.GetName], [root.GetTitle] §Y[root.GetName]§! has left our borders. [root.GetHeSheCap] recorded a message upon [root.GetHisHer] departure."
  enclave.8000.end: "Thankfully, aside from vacating [root.GetHisHer] workspace, [root.GetName] did not cause any other disruptions to leadership."
