--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -1930,8 +1930,8 @@
  CAN_AFFORD_SPECIAL_OFFER_NOT_TRIGGER:0 "$BUYER|Y$ cannot afford the special offer provided by $SELLER|Y$."
  SET_AGREEMENT_PRESET_EFFECT:0 "Applies the terms of the $PRESET|Y$ preset to the agreement"
  SET_AGREEMENT_PRESET_EFFECT_NO_APPLY:0 "Sets preset of the agreement to the $PRESET|Y$ preset"
- HAS_LOYALTY_LESS_THAN:0 "$SUBJECT|H$ does NOT have $COMPARE$ $VAL1|2Y$ loyalty"
- HAS_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ has $COMPARE$ $VAL1|2Y$ loyalty"
+ HAS_LOYALTY_LESS_THAN:0 "$SUBJECT|H$ ไม่มีความภักดี $COMPARE$ $VAL1|2Y$"
+ HAS_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ มีความภักดี $COMPARE$ $VAL1|2Y$"
  HAS_MONTHLY_LOYALTY_LESS_THAN:0 "$SUBJECT|H$ ความภักดีต่อเดือนไม่ $COMPARE$ $VAL1|2Y$"
  HAS_MONTHLY_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ ความภักดีต่อเดือน $COMPARE$ $VAL1|2Y$"
  effect_every_archaeological_site:1 "ทุกแหล่งโบราณคดี"
