--- a/mod/thmod/localisation/english/events_l_english.yml
+++ b/mod/thmod/localisation/english/events_l_english.yml
@@ -1384,7 +1384,7 @@
  IRASSIAN_ARTIFACT_FOUND_DESC:0 "We have learned that there may have been Precursor activity on §H[precursor_planet.GetName]§! at some point in the galactic past. The sphere of influence of the ancient Irassian Concordat is known to have extended to this region of space, making this world a promising lead in our ongoing efforts to learn more about their civilization."
  CYBREX_ARTIFACT_FOUND:0 "Signs of Cybrex Activity"
  CYBREX_ARTIFACT_FOUND_DESC:0 "We have learned that there may have been Precursor activity on §H[precursor_planet.GetName]§! at some point in the galactic past. The sphere of influence of the ancient Cybrex is known to have extended to this region of space, making this world a promising lead in our ongoing efforts to learn more about their civilization."
- new_precursor_project:0 "A new archaeological special project is available on §L[precursor_planet.GetName]§!."
+ new_precursor_project:0 "โครงการพิเศษทางโบราณคดีใหม่อยู่ที่ดาว §L[precursor_planet.GetName]§!"
  precursor.310.name:0 "นักสะสมของโบราณ"
  precursor.310.desc:0 "A private collector on [collector_home.GetName] has somehow come into ownership of an ancient Precursor artifact believed to be [Root.GetPrecursorCiv] in origin. Despite government pressure, the collector has so far been reluctant to part with it."
  precursor.310.a:0 "ทุกคนสามารถซื้อได้ด้วยเงิน"
